--- a/index.html
+++ b/index.html
@@ -1,50 +1,103 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Aadhaar — Auto QR Scan & Decode (Local)</title>
+  <title>Aadhaar — QR Scanner & Decode</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <style>
-    body{font-family:system-ui,Segoe UI,Roboto,Arial;max-width:980px;margin:18px auto;padding:12px;color:#111}
-    #video{width:100%;max-height:480px;border-radius:8px;background:#000}
-    button,input,select{padding:10px;border-radius:8px;border:1px solid #ddd}
-    #controls{display:flex;gap:10px;flex-wrap:wrap;margin:8px 0}
-    pre{background:#fafafa;padding:12px;border-radius:8px;border:1px solid #eee;white-space:pre-wrap}
-    .small{font-size:13px;color:#666}
-    .inline{display:inline-block}
-    .dot{width:10px;height:10px;border-radius:50%;display:inline-block;margin-right:8px}
-    .ok{background:#16a34a}
-    .bad{background:#ef4444}
+    body {
+      font-family: system-ui, Segoe UI, Roboto, Arial;
+      background: #f8f9fa;
+      margin: 0;
+      padding: 0;
+    }
+    .scanner-container {
+      position: relative;
+      max-width: 600px;
+      margin: 30px auto;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
+    #video {
+      width: 100%;
+      height: auto;
+      display: block;
+      background: #000;
+    }
+    /* Scanner overlay */
+    .overlay {
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.4);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .scanner-box {
+      width: 250px;
+      height: 250px;
+      border: 3px solid #00ff99;
+      border-radius: 8px;
+      box-shadow: 0 0 20px rgba(0,255,150,0.6);
+      animation: glow 1.5s infinite alternate;
+    }
+    @keyframes glow {
+      from { box-shadow: 0 0 10px rgba(0,255,150,0.5); }
+      to { box-shadow: 0 0 25px rgba(0,255,150,0.9); }
+    }
+    #controls { margin-top: 15px; }
+    pre {
+      background: #fff;
+      padding: 12px;
+      border-radius: 8px;
+      border: 1px solid #eee;
+      white-space: pre-wrap;
+    }
+    .dot {
+      width: 10px; height: 10px; border-radius: 50%; display:inline-block; margin-left:6px;
+    }
+    .ok { background:#16a34a; }
+    .bad { background:#ef4444; }
   </style>
 
-  <!-- jsQR and pako via CDN -->
+  <!-- jsQR and pako -->
   <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/pako@2.1.0/dist/pako.min.js"></script>
 </head>
-<body>
-  <h2>Aadhaar — Auto QR Scan & Decode (Local)</h2>
-  <p class="small">Open this page, allow camera access. The scanner will continuously look for Aadhaar Secure QR, automatically decode and show fields. Nothing leaves your browser.</p>
+<body class="container py-4">
 
-  <video id="video" autoplay playsinline></video>
+  <h2 class="text-center mb-4">Aadhaar — QR Scanner & Decode</h2>
 
-  <div id="controls">
-    <button id="startBtn">Start Camera</button>
-    <button id="stopBtn" disabled>Stop Camera</button>
-    <input id="fileInput" type="file" accept="image/*" />
-    <button id="resetBtn">Reset</button>
-    <div style="margin-left:auto" class="small">
+  <div class="scanner-container">
+    <video id="video" autoplay playsinline></video>
+    <div class="overlay">
+      <div class="scanner-box"></div>
+    </div>
+  </div>
+
+  <div id="controls" class="d-flex flex-wrap gap-2 justify-content-center">
+    <button id="startBtn" class="btn btn-success">Start Camera</button>
+    <button id="stopBtn" class="btn btn-danger" disabled>Stop Camera</button>
+    <input id="fileInput" type="file" accept="image/*" class="form-control" style="max-width:220px" />
+    <button id="resetBtn" class="btn btn-secondary">Reset</button>
+    <div class="ms-auto small mt-2">
       Status: <span id="statusText">idle</span> <span id="statusDot" class="dot bad"></span>
     </div>
   </div>
 
-  <h3>Decoded Output</h3>
+  <h4 class="mt-4">Decoded Output</h4>
   <pre id="out">(no output yet)</pre>
-  <div id="links"></div>
+  <div id="links" class="mt-2"></div>
 
 <script>
-/* ---------- Helpers (same logic as earlier) ---------- */
+/* ---------- Helpers ---------- */
 function bigIntDecimalToBytes(decStr) {
-  decStr = (decStr || "").replace(/\\D/g, '');
+  decStr = (decStr || "").replace(/\D/g, '');
   if (!decStr) return new Uint8Array([]);
   const bi = BigInt(decStr);
   if (bi === 0n) return new Uint8Array([0]);
@@ -55,14 +108,11 @@ function bigIntDecimalToBytes(decStr) {
   return u8;
 }
 function bytesToHex(u8) { return Array.from(u8||[]).map(b=>b.toString(16).padStart(2,"0")).join(""); }
-
 function tryDecompress(u8) {
-  // Try gzip (pako.ungzip) then zlib (pako.inflate)
   try { return pako.ungzip(u8); } catch(e){}
   try { return pako.inflate(u8); } catch(e){}
   throw new Error("Decompress failed (not gzip/zlib).");
 }
-
 function splitUntilFF(u8, count){
   const parts=[]; let cursor=0;
   for (let i=0;i<count;i++){
@@ -73,9 +123,7 @@ function splitUntilFF(u8, count){
   }
   return { parts, cursor };
 }
-
 function parseUidaiBytes(decompressed) {
-  // Try 17-field (version included) then 16-field
   const FIELD_17 = ["version","presenceBit","referenceId","name","dob","gender","careOf","district","landmark","house","location","pincode","postOffice","state","street","subDistrict","vtc"];
   const FIELD_16 = ["presenceBit","referenceId","name","dob","gender","careOf","district","landmark","house","location","pincode","postOffice","state","street","subDistrict","vtc"];
   let partsInfo, FIELD_ORDER;
@@ -121,9 +169,7 @@ const statusDot = document.getElementById("statusDot");
 const links = document.getElementById("links");
 const fileInput = document.getElementById("fileInput");
 
-let stream=null;
-let scanning=false;
-let scanLoopHandle=null;
+let stream=null, scanning=false, scanLoopHandle=null;
 const canvas = document.createElement("canvas");
 const ctx = canvas.getContext("2d");
 
@@ -135,7 +181,15 @@ function setStatus(s, ok){
 async function startCamera(){
   if (stream) return;
   try {
-    stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" }, audio:false });
+    stream = await navigator.mediaDevices.getUserMedia({
+      video: {
+        facingMode: "environment",
+        width: { ideal: 1920 },
+        height: { ideal: 1080 },
+        aspectRatio: { ideal: 1.777 }
+      },
+      audio:false
+    });
     video.srcObject = stream;
     await video.play();
     setStatus("camera started", true);
@@ -144,30 +198,20 @@ async function startCamera(){
     scanLoop();
   } catch (e) {
     setStatus("camera error", false);
-    console.error(e);
     alert("Camera start failed: " + e.message);
   }
 }
-
 function stopCamera(){
   scanning = false;
   if (scanLoopHandle) { cancelAnimationFrame(scanLoopHandle); scanLoopHandle = null; }
-  if (stream) {
-    stream.getTracks().forEach(t => t.stop());
-    stream = null;
-  }
+  if (stream) { stream.getTracks().forEach(t => t.stop()); stream=null; }
   video.pause(); video.srcObject = null;
   startBtn.disabled = false; stopBtn.disabled = true;
   setStatus("camera stopped", false);
 }
-
 startBtn.addEventListener("click", startCamera);
 stopBtn.addEventListener("click", stopCamera);
-resetBtn.addEventListener("click", ()=>{
-  outEl.textContent = "(no output yet)"; links.innerHTML = ""; setStatus("idle", false);
-  // allow restart scanning
-  if (!startBtn.disabled) startBtn.disabled = false;
-});
+resetBtn.addEventListener("click", ()=>{ outEl.textContent="(no output yet)"; links.innerHTML=""; setStatus("idle",false); });
 
 fileInput.addEventListener("change", async (ev)=>{
   if (!ev.target.files || !ev.target.files[0]) return;
@@ -178,16 +222,12 @@ fileInput.addEventListener("change", async (ev)=>{
     ctx.drawImage(img,0,0);
     const imgData = ctx.getImageData(0,0,canvas.width,canvas.height);
     const code = jsQR(imgData.data, imgData.width, imgData.height);
-    if (code && code.data) {
-      await onQRCodeFound(code.data);
-    } else {
-      alert("No QR detected in image.");
-    }
+    if (code && code.data) { await onQRCodeFound(code.data); }
+    else { alert("No QR detected in image."); }
   };
   img.src = URL.createObjectURL(f);
 });
 
-/* main scanning loop */
 async function scanLoop(){
   if (!scanning) return;
   if (video.readyState === video.HAVE_ENOUGH_DATA) {
@@ -196,88 +236,57 @@ async function scanLoop(){
     ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
     const imgData = ctx.getImageData(0,0,canvas.width,canvas.height);
     const code = jsQR(imgData.data, imgData.width, imgData.height, { inversionAttempts: "attemptBoth" });
-    if (code && code.data) {
-      // got a QR string
-      await onQRCodeFound(code.data);
-      return; // stop scanning
-    } else {
-      setStatus("scanning...", true);
-    }
+    if (code && code.data) { await onQRCodeFound(code.data); return; }
+    else { setStatus("scanning...", true); }
   }
   scanLoopHandle = requestAnimationFrame(scanLoop);
 }
 
-/* ---------- QR handling & decode ---------- */
 async function onQRCodeFound(qrStr){
   setStatus("QR found — decoding...", true);
   scanning = false;
   if (scanLoopHandle) { cancelAnimationFrame(scanLoopHandle); scanLoopHandle = null; }
-  // Stop camera to avoid repeated reads
-  if (stream) {
-    stream.getTracks().forEach(t=>t.stop()); stream=null;
-    video.pause(); video.srcObject = null;
-  }
+  if (stream) { stream.getTracks().forEach(t=>t.stop()); stream=null; video.pause(); video.srcObject=null; }
   startBtn.disabled = false; stopBtn.disabled = true;
   try {
-    // QR content might be a numeric string OR data:...; extract digits if needed
     const numeric = (qrStr.match(/[0-9]+/g) || []).join("");
     if (!numeric) throw new Error("No numeric content found in QR");
-    // convert -> bytes -> decompress
     const raw = bigIntDecimalToBytes(numeric);
     const decompressed = tryDecompress(raw);
-    // parse
     const parsed = parseUidaiBytes(decompressed);
     const d = parsed.data;
     const out = {
-      name: d.name || "",
-      dob: d.dob || "",
-      gender: d.gender || "",
-      careOf: d.careOf || "",
-      district: d.district || "",
-      landmark: d.landmark || "",
-      house: d.house || "",
-      location: d.location || "",
-      pincode: d.pincode || "",
-      postOffice: d.postOffice || "",
-      state: d.state || "",
-      street: d.street || "",
-      subDistrict: d.subDistrict || "",
-      vtc: d.vtc || "",
-    //   referenceId: d.referenceId || "",
-    //   presenceBit: d.presenceBit || "",
+      name: d.name || "", dob: d.dob || "", gender: d.gender || "",
+      careOf: d.careOf || "", district: d.district || "", landmark: d.landmark || "",
+      house: d.house || "", location: d.location || "", pincode: d.pincode || "",
+      postOffice: d.postOffice || "", state: d.state || "", street: d.street || "",
+      subDistrict: d.subDistrict || "", vtc: d.vtc || "",
       emailHashHex: parsed.emailHash ? bytesToHex(parsed.emailHash) : null,
       mobileHashHex: parsed.mobileHash ? bytesToHex(parsed.mobileHash) : null,
-    //   signatureLen: parsed.signatureLen,
-    //   photoBytesLen: parsed.photoBytes.length
     };
-    // show
-    let text = "";
-    for (const k of Object.keys(out)) text += `${k}: ${out[k] ?? ""}\n`;
-    outEl.textContent = text;
-
-    // download JSON
-    const jsonBlob = new Blob([JSON.stringify(out,null,2)], { type: "application/json" });
-    const jurl = URL.createObjectURL(jsonBlob);
-    const jlink = document.createElement("a");
-    jlink.href = jurl; jlink.download = "aadhaar_decoded.json"; jlink.textContent = "Download decoded JSON";
+    let text=""; for (const k of Object.keys(out)) text+=`${k}: ${out[k] ?? ""}\n`;
+    outEl.textContent=text;
+    const jsonBlob=new Blob([JSON.stringify(out,null,2)],{type:"application/json"});
+    const jurl=URL.createObjectURL(jsonBlob);
+    const jlink=document.createElement("a");
+    jlink.href=jurl;jlink.download="aadhaar_decoded.json";jlink.textContent="Download JSON";jlink.className="btn btn-link";
     links.appendChild(jlink);
-
-    // photo link
-    if (parsed.photoBytes && parsed.photoBytes.length > 0) {
-      const blob = new Blob([parsed.photoBytes], { type: "image/jp2" });
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement("a");
-      a.href = url; a.download = "aadhaar_photo.jp2"; a.textContent = "Download photo (JP2)";
-      a.style.display = "inline-block"; a.style.marginLeft = "12px";
+    if (parsed.photoBytes && parsed.photoBytes.length>0){
+      const blob=new Blob([parsed.photoBytes],{type:"image/jp2"});
+      const url=URL.createObjectURL(blob);
+      const a=document.createElement("a");
+      a.href=url;a.download="aadhaar_photo.jp2";a.textContent="Download Photo";a.className="btn btn-link";
       links.appendChild(a);
     }
-    setStatus("decoded successfully", true);
-  } catch (err) {
-    outEl.textContent = "Error: " + (err && err.message ? err.message : String(err));
-    setStatus("decode error", false);
-    console.error(err);
+    setStatus("decoded successfully",true);
+  } catch(err){
+    outEl.textContent="Error: "+(err.message||String(err));
+    setStatus("decode error",false);
   }
 }
 </script>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
