--- a/index.html
+++ b/index.html
@@ -1,1 +1,109 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <title>Aadhaar QR Scanner</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+  <style>
+    body {
+      background: linear-gradient(135deg, #6a11cb, #2575fc);
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    .scanner-card {
+      background: #fff;
+      border-radius: 20px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
+      padding: 25px;
+      max-width: 500px;
+      width: 100%;
+    }
+
+    .btn-custom {
+      border-radius: 30px;
+      font-weight: 600;
+      padding: 10px 20px;
+      transition: 0.3s;
+    }
+
+    .btn-custom:hover {
+      transform: scale(1.05);
+    }
+
+    #status {
+      font-weight: 600;
+    }
+
+    .result-box {
+      background: #f1f5f9;
+      padding: 15px;
+      border-radius: 12px;
+      margin-top: 15px;
+      font-size: 15px;
+    }
+
+    #reader {
+      border-radius: 15px;
+      overflow: hidden;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="scanner-card text-center">
+    <h3 class="mb-3 text-primary fw-bold">Aadhaar QR Scanner</h3>
+    <div id="reader" style="width:100%;"></div>
+
+    <div class="d-flex justify-content-center gap-3 mt-3">
+      <button id="startBtn" class="btn btn-success btn-custom">▶ Start Camera</button>
+      <button id="stopBtn" class="btn btn-danger btn-custom">⏹ Stop Camera</button>
+    </div>
+
+    <p id="status" class="mt-3 text-muted">Status: <span class="text-dark">Idle</span></p>
+
+    <div class="result-box text-start">
+      <h6 class="fw-bold text-secondary">Decoded Data:</h6>
+      <pre id="decoded" class="mb-0">No data yet...</pre>
+    </div>
+  </div>
+
+  <script>
+    const html5QrCode = new Html5Qrcode("reader");
+    const statusEl = document.getElementById("status");
+    const decodedEl = document.getElementById("decoded");
+
+    document.getElementById("startBtn").addEventListener("click", () => {
+      html5QrCode.start(
+        { facingMode: "environment" },
+        { fps: 10, qrbox: 250 },
+        (decodedText) => {
+          decodedEl.innerText = decodedText;
+          statusEl.innerHTML = 'Status: <span class="text-success">QR Code Detected ✅</span>';
+        },
+        () => { }
+      ).then(() => {
+        statusEl.innerHTML = 'Status: <span class="text-primary">Camera Running...</span>';
+      }).catch(err => {
+        statusEl.innerHTML = `<span class="text-danger">Error: ${err}</span>`;
+      });
+    });
+
+    document.getElementById("stopBtn").addEventListener("click", () => {
+      html5QrCode.stop().then(() => {
+        statusEl.innerHTML = 'Status: <span class="text-warning">Camera Stopped</span>';
+      }).catch(err => {
+        statusEl.innerHTML = `<span class="text-danger">Error: ${err}</span>`;
+      });
+    });
+  </script>
+</body>
+
+</html>
